fixed background image overflow

--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -401,12 +401,13 @@ body{
 
     position: absolute;
     top: -10px;
+    left: -1px;
     overflow-x: hidden;
     overflow-y: hidden;
 
     z-index:-2;
-    width: 120%;
-    height: 120%;
+    width: 100%;
+    height: 100%;
 
     background-image: url("/background-overlays/pixel-grain-1.svg");
     background-repeat: no-repeat;
@@ -537,8 +538,11 @@ body{
 }
 
 @media (max-width: 800px) {
+
     #header{
-        height: 60vh;
+
+        height: 65dvh;
+
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -587,8 +591,13 @@ body{
 
     }
 
+
     #status-ctn{
         display: none;
+    }
+
+    #rest-wrap{
+        flex-shrink: 0;
     }
 
     #nav{
@@ -596,7 +605,6 @@ body{
         flex-direction: column;
         align-items: center;
         gap:20px;
-
         #kessoku-logo{
             display: none;
         }
